<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.avm.citycenter.fragments_ui.home.HomeParentFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_SettingsFragment"
            app:destination="@id/navigation_home_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home_settings"
        android:name="com.avm.citycenter.fragments_ui.home.SettingsFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_SettingsFragment_to_HomeParentFragment"
            app:destination="@id/navigation_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shops"
        android:name="com.avm.citycenter.fragments_ui.stores.StoresParentFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_stores" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.avm.citycenter.fragments_ui.favourites.FavouritesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/navigation_location"
        android:name="com.avm.citycenter.fragments_ui.contact.ContactUsFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_contact_us" />
</navigation>