<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/signUpPageToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="-20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/login_background_image" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/city_center_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/slogan"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias=".2"
            app:layout_constraintWidth_percent="0.7">


            <RelativeLayout
                android:id="@+id/signUpPhoneNumberEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/white_rounded_outline_border"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintWidth_percent="0.75">

                <EditText
                    android:id="@+id/signUpPhoneNumberEditText"
                    style="@style/login_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/signUpPasswordEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/white_rounded_outline_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditTextLayout"
                app:layout_constraintWidth_percent="0.75">

                <EditText
                    android:id="@+id/signUpPasswordEditText"
                    style="@style/login_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_sign_up"
                    android:minEms="4" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/signUpNameEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/white_rounded_outline_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditTextLayout"
                app:layout_constraintWidth_percent="0.75">

                <EditText
                    android:id="@+id/signUpNameEditText"
                    style="@style/login_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_surname"
                    android:inputType="textPersonName" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/signUpMailEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/white_rounded_outline_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditTextLayout"
                app:layout_constraintWidth_percent="0.75">

                <EditText
                    android:id="@+id/signUpMailEditText"
                    style="@style/login_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress" />
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/signUpPageSignUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintWidth_percent=".95">

            <CheckBox
                android:id="@+id/termsOfUseCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                app:buttonTint="@color/white" />

            <TextView
                android:id="@+id/termsOfUserTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_use"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_terms_of_use"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/signUpPageSignUpButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="6"
            android:background="@drawable/pink_filled_rounded_background"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias=".6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>